# authn-ex

./: .gitignore  Cargo.toml  Justfile  README.md  docker-compose.yml  flake.nix  otel-collector-config.yml
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs
front/: .lesshst  package-lock.json  server.mjs  webpack.config.js
front/libs/: auth.mjs  db.mjs
front/public/: client.js  components.js
front/views/: home.html  index.html  reauth.html
libs/lib-core/: Cargo.toml
libs/lib-core/src/: lib.rs
libs/lib-core/src/config/: env.rs  env_key.rs  mod.rs  mongo.rs  otel.rs
libs/lib-core/src/ctx/: error.rs  mod.rs
libs/lib-core/src/model/: error.rs  mod.rs  model_manager.rs  session.rs  user.rs  util.rs
libs/lib-core/src/model/bmc_base/: base_functions.rs  mod.rs
libs/lib-core/src/token/: claims.rs  cookies.rs  error.rs  keys.rs  mod.rs
libs/lib-core/src/token/snapshots/: lib_core__token__cookies__tests__get_token_cookie.snap
libs/lib-web/: Cargo.toml
libs/lib-web/src/: error.rs  lib.rs
libs/lib-web/src/middleware/: ctx_require.rs  mod.rs
server/: Cargo.toml
server/examples/: ex.rs
server/src/: main.rs  otel.rs  util_routes.rs
server/src/auth/: create_account.rs  error.rs  login.rs  logout.rs  mod.rs  passkey.rs  routes.rs
server/src/auth/snapshots/: server__auth__login__tests__build_login_response.snap  server__auth__logout__tests__build_logout_response.snap  server__auth__user_info__tests__get_access_token.snap  server__auth__user_info__tests__get_refresh_token.snap
src/: main.rs  otel.rs  util_routes.rs
