[workspace]
resolver = "2"

members = [
    "server",
    "libs/lib-core",
    "libs/lib-web",
]

[workspace.dependencies]
lib-core = { path = "libs/lib-core" }
lib-web = { path = "libs/lib-web" }

tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-core = "0.1.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.22"

opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21.2", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.14.0", features = ["metrics"] }
opentelemetry-stdout = { version = "0.2.0", features = ["trace", "metrics"] }
opentelemetry-semantic-conventions = "0.13.0"

# BEGIN WEBSERVER
tokio = { version = "1.39.2", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tower-cookies = { version = "0.10.0" }
ring = "0.17.7"
async-trait = "0.1"

passkey = "0.2.0"
base64 = "0.22.1"
tower-sessions = "0.12.2"
jsonwebtoken = "9.3.0"

mongodb = { version = "3.0.1" }
bson = { version = "2.11.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
# END WEBSERVER

anyhow = "1.0.86"
thiserror = "1.0.63"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.9.0"
derive_more = { version = "1.0.0", features = ["full"] }
url = "2"
coset = "0.3.8"
once_cell = "1.19.0"
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
lazy_static = "1.5.0"
strum = { version = "0.26.3", features = ["derive"] }
futures = "0.3.30"

# BEGIN TESTING
async-std = { version = "1.12.0", features = ["attributes"] }
insta = "1.39.0"
rstest = "0.22.0"
similar-asserts = "1.5.0"
serial_test = "3.1.1"
# END TESTING
