[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-core = { workspace = true }
lib-web = { workspace = true }

# BEGIN OBSERVABILITY
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
# END OBSERVABILITY

# BEGIN WEBSERVER
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }

passkey = { workspace = true }
base64 = { workspace = true }
tower-sessions = { workspace = true }
jsonwebtoken = { workspace = true }

mongodb = { workspace = true }
bson = { workspace = true }
chrono = { workspace = true }
# END WEBSERVER

serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
derive_more = { workspace = true }
url = { workspace = true }
coset = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
async-std = { workspace = true }
insta = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }
anyhow = { workspace = true }